Add baltop command and leaderboard support
Introduce a baltop player command and leaderboard plumbing across the economy module. EconomyManager now supports multi-currency overloads/defaults and a getLeaderboard API; added LeaderboardEntry record. Implementations (Fox, VaultUnlocked, EssentialsPlus) now provide leaderboard data and use the new data type. Registered BalTopCommand in EconomyModule and added language keys for header/entries/no-data. Also refactored some manager code to reuse the interface defaults and removed duplicated single-currency helper implementations.